--- a/tailwind.css
+++ b/tailwind.css
@@ -172,4 +172,24 @@
     @apply bg-background text-foreground font-sans;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
+  /* Keep input backgrounds transparent on focus and autofill */
+  input,
+  textarea {
+    background-color: transparent;
+  }
+  input:focus,
+  textarea:focus {
+    background-color: transparent;
+  }
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus {
+    -webkit-text-fill-color: #7a7a7a;
+    -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+    box-shadow: 0 0 0px 1000px transparent inset;
+    transition: background-color 9999s ease-out 0s;
+  }
 }
