--- a/tailwind.css
+++ b/tailwind.css
@@ -1,5 +1,10 @@
+/* 👇 Must be above the Tailwind directives */
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap');
+
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 @layer components {
   .all-\[unset\] {
@@ -192,4 +197,19 @@
     box-shadow: 0 0 0px 1000px transparent inset;
     transition: background-color 9999s ease-out 0s;
   }
+}
+
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;                /* Chrome, Safari */
+}
+
+@keyframes marquee {
+  0%   { transform: translateX(0); }
+  100% { transform: translateX(-50%); } /* move half, since we duplicated list */
+}
+
+.animate-marquee {
+  animation: marquee 20s linear infinite;
 }
